force-app/main/default/objects/Product2/fields/Negoptim__Top20_Drive__c.field-meta.xml
<CustomField>
    <fullName>Negoptim__Top20_Drive__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Top20 Drive</label>
    <type>Checkbox</type>
</CustomField>