force-app/main/default/objects/Product2/fields/Negoptim__Total_Weight__c.field-meta.xml
<CustomField>
    <fullName>Negoptim__Total_Weight__c</fullName>
    <description>Total weight</description>
    <formula>Negoptim__Element_nb__c  *  Negoptim__Weight__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Weight</label>
    <precision>18</precision>
    <scale>5</scale>
    <type>Number</type>
</CustomField>