force-app/main/default/objects/Product2/fields/Negoptim__UV__c.field-meta.xml
<CustomField>
    <fullName>Negoptim__UV__c</fullName>
    <label>UV</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Negoptim__Unit_Fac</valueSetName>
    </valueSet>
</CustomField>