force-app/main/default/objects/Product2/fields/Negoptim__Weight__c.field-meta.xml
<CustomField>
    <fullName>Negoptim__Weight__c</fullName>
    <label>Weight</label>
    <precision>18</precision>
    <scale>5</scale>
    <type>Number</type>
</CustomField>