force-app/main/default/objects/Product2/fields/ParentCategory__c.field-meta.xml
<CustomField>
    <fullName>ParentCategory__c</fullName>
    <formula>Category__r.Parent_Element__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Categogy Parent</label>
    <type>Text</type>
</CustomField>