force-app/main/default/objects/Product2/fields/Priority_SM__c.field-meta.xml
<CustomField>
    <fullName>Priority_SM__c</fullName>
    <label>Priority SM</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Gold</fullName>
            </value>
            <value>
                <fullName>Silver</fullName>
            </value>
            <value>
                <fullName>Bronze</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>