force-app/main/default/objects/Product2/fields/PriorityConv__c.field-meta.xml
<CustomField>
    <fullName>PriorityConv__c</fullName>
    <label>Priority Convenience</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Gold</fullName>
            </value>
            <value>
                <fullName>Silver</fullName>
            </value>
            <value>
                <fullName>Bronze</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>