force-app/main/default/objects/Product2/fields/Product_EAN__c.field-meta.xml
<CustomField>
    <fullName>Product_EAN__c</fullName>
    <label>Product EAN</label>
    <length>20</length>
    <type>Text</type>
</CustomField>