force-app/main/default/objects/Product2/fields/Promo_FDR__c.field-meta.xml
<CustomField>
    <fullName>Promo_FDR__c</fullName>
    <label>SPKERCADELAC Std/promo</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Promo</fullName>
            </value>
            <value>
                <fullName>FDR</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>