force-app/main/default/objects/Product2/fields/RankingDrive__c.field-meta.xml
<CustomField>
    <fullName>RankingDrive__c</fullName>
    <label>Ranking Drive</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>