force-app/main/default/objects/Product2/fields/RankingSuper__c.field-meta.xml
<CustomField>
    <fullName>RankingSuper__c</fullName>
    <label>Ranking Super</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>