force-app/main/default/objects/Product2/fields/SPKERCADEL_Negoptim_Average_Weekly_HMSM__c.field-meta.xml
<CustomField>
    <fullName>SPKERCADEL_Negoptim_Average_Weekly_HMSM__c</fullName>
    <label>SPKERCADEL Negoptim Average Weekly HMSM</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>