force-app/main/default/objects/Product2/fields/SPKERCADELAC_Famille__c.field-meta.xml
<CustomField>
    <fullName>SPKERCADELAC_Famille__c</fullName>
    <label>SPKERCADELAC Famille</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>SPKERCADELACONFAMILY__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>GALETTES PB</fullName>
            </value>
            <value>
                <fullName>PALETS PB</fullName>
            </value>
            <value>
                <fullName>PETIT BEURRE</fullName>
            </value>
            <value>
                <fullName>BARRES MGV MARBREES</fullName>
            </value>
            <value>
                <fullName>BARRES MGV</fullName>
            </value>
            <value>
                <fullName>AUTRES MIXTES</fullName>
            </value>
            <value>
                <fullName>GATEAUX BRETONS</fullName>
            </value>
            <value>
                <fullName>MOELLEUX</fullName>
            </value>
            <value>
                <fullName>QUATRE QUART</fullName>
            </value>
            <value>
                <fullName>MUFFINS</fullName>
            </value>
            <value>
                <fullName>MADELEINES COQUILLES MGV</fullName>
            </value>
            <value>
                <fullName>MADELEINES INJECTEES</fullName>
            </value>
            <value>
                <fullName>MADELEINES COQUILLES PB</fullName>
            </value>
            <value>
                <fullName>MADELEINES COQUES</fullName>
            </value>
            <value>
                <fullName>MADELEINES MIXTE</fullName>
            </value>
            <value>
                <fullName>MINI PB</fullName>
            </value>
            <value>
                <fullName>MINI MGV</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>