force-app/main/default/objects/Product2/fields/SPKERCADELAC_FAT__c.field-meta.xml
<CustomField>
    <fullName>SPKERCADELAC_FAT__c</fullName>
    <label>Matière Grasse</label>
    <length>30</length>
    <type>Text</type>
</CustomField>