force-app/main/default/objects/Product2/fields/SPKERCADELAC_INGREDIENTS__c.field-meta.xml
<CustomField>
    <fullName>SPKERCADELAC_INGREDIENTS__c</fullName>
    <label>COMPO</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>MIXTE</fullName>
            </value>
            <value>
                <fullName>PUR BEURRE</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>