force-app/main/default/objects/Product2/fields/SPKERCADELAC_RECIPE__c.field-meta.xml
<CustomField>
    <fullName>SPKERCADELAC_RECIPE__c</fullName>
    <label>RECETTE</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>SIMPLE</fullName>
            </value>
            <value>
                <fullName>INJECTEES</fullName>
            </value>
            <value>
                <fullName>INJECTEES + ECLATS</fullName>
            </value>
            <value>
                <fullName>SIMPLE + ECLATS</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>