force-app/main/default/objects/Product2/fields/SPKERCADELAC_SHELL__c.field-meta.xml
<CustomField>
    <fullName>SPKERCADELAC_SHELL__c</fullName>
    <label>COQUE</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>NOIR</fullName>
            </value>
            <value>
                <fullName>LAIT</fullName>
            </value>
            <value>
                <fullName>SANS</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>