force-app/main/default/objects/Product2/fields/SPKERCADELACArtLog__c.field-meta.xml
<CustomField>
    <fullName>SPKERCADELACArtLog__c</fullName>
    <label>SPKERCADELAC ArtLog</label>
    <length>100</length>
    <type>Text</type>
</CustomField>