force-app/main/default/objects/Product2/fields/SPKERCADELACBigLogo__c.field-meta.xml
<CustomField>
    <fullName>SPKERCADELACBigLogo__c</fullName>
    <formula>IF ( RecordType.DeveloperName =&quot;Box&quot;,

IMAGE(&apos;/resource/BOX/BOX/BOX.png&apos;, &apos;&apos; , 60, 60),

IF ( RecordType.DeveloperName =&quot;Product&quot;,

IMAGE(&apos;/resource/LogosProduct/LogosProduct/&apos; + Negoptim__Product_EAN__c +&apos;.png&apos;, &apos;&apos; , 60, 60), NULL))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>SPKERCADELAC Big Logo</label>
    <type>Text</type>
</CustomField>