force-app/main/default/objects/Product2/fields/SPKERCADELACCADRIVEEvol__c.field-meta.xml
<CustomField>
    <fullName>SPKERCADELACCADRIVEEvol__c</fullName>
    <label>SPKERCADELAC CA % DRIVE Evol</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>