force-app/main/default/objects/Product2/fields/SPKERCADELACCAPERCENTHMEvol__c.field-meta.xml
<CustomField>
    <fullName>SPKERCADELACCAPERCENTHMEvol__c</fullName>
    <label>SPKERCADELAC CA % HM Evol</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>