force-app/main/default/objects/Product2/fields/SPKERCADELACCAPROXIEvol__c.field-meta.xml
<CustomField>
    <fullName>SPKERCADELACCAPROXIEvol__c</fullName>
    <label>SPKERCADELAC CA % PROXI Evol</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>