force-app/main/default/objects/Product2/fields/SPKERCADELACCASMEvol__c.field-meta.xml
<CustomField>
    <fullName>SPKERCADELACCASMEvol__c</fullName>
    <label>SPKERCADELAC CA % SM Evol</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>