force-app/main/default/objects/Product2/fields/SPKERCADELACCoeffGratforinfoOnly__c.field-meta.xml
<CustomField>
    <fullName>SPKERCADELACCoeffGratforinfoOnly__c</fullName>
    <label>SPKERCADELACCoeff Grat (for info only)</label>
    <precision>4</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>