force-app/main/default/objects/Product2/fields/SPKERCADELACDUN14__c.field-meta.xml
<CustomField>
    <fullName>SPKERCADELACDUN14__c</fullName>
    <label>SPKERCADELAC DUN14</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>