force-app/main/default/objects/Product2/fields/SPKERCADELACExcluEnseigne__c.field-meta.xml
<CustomField>
    <fullName>SPKERCADELACExcluEnseigne__c</fullName>
    <label>SPKERCADELAC Exclu Enseigne</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>CARREFOUR</fullName>
            </value>
            <value>
                <fullName>GALEC</fullName>
            </value>
            <value>
                <fullName>INTERMARCHE</fullName>
            </value>
            <value>
                <fullName>TOUS SAUF CARREFOUR</fullName>
            </value>
            <value>
                <fullName>TOUS SAUF GALEC</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>