force-app/main/default/objects/Product2/fields/SPKERCADELACFormat__c.field-meta.xml
<CustomField>
    <fullName>SPKERCADELACFormat__c</fullName>
    <label>SPKERCADELAC Format</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>SPKERCADELACPresentation__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>BARQUETTE 200G</fullName>
            </value>
            <value>
                <fullName>BARQUETTE 240G</fullName>
            </value>
            <value>
                <fullName>BARQUETTE 300G</fullName>
            </value>
            <value>
                <fullName>BARQUETTE 500G</fullName>
            </value>
            <value>
                <fullName>COFFRET 325G</fullName>
            </value>
            <value>
                <fullName>COFFRET 90G</fullName>
            </value>
            <value>
                <fullName>ETUI 125G</fullName>
            </value>
            <value>
                <fullName>GATEAUX 1/2 LUNE 400G</fullName>
            </value>
            <value>
                <fullName>GATEAUX ROND 400G</fullName>
            </value>
            <value>
                <fullName>LONG 200G</fullName>
            </value>
            <value>
                <fullName>LONG 350G</fullName>
            </value>
            <value>
                <fullName>LONG 380G</fullName>
            </value>
            <value>
                <fullName>LONG 450G</fullName>
            </value>
            <value>
                <fullName>LONG 500G</fullName>
            </value>
            <value>
                <fullName>LONG 500X2</fullName>
            </value>
            <value>
                <fullName>LONG 600G</fullName>
            </value>
            <value>
                <fullName>LONG 690G</fullName>
            </value>
            <value>
                <fullName>LONG 800G</fullName>
            </value>
            <value>
                <fullName>SACHET 240G</fullName>
            </value>
            <value>
                <fullName>SACHET 250G</fullName>
            </value>
            <value>
                <fullName>SACHET 280G</fullName>
            </value>
            <value>
                <fullName>SACHET 300G</fullName>
            </value>
            <value>
                <fullName>SACHET 360G</fullName>
            </value>
            <value>
                <fullName>SACHET 363G</fullName>
            </value>
            <value>
                <fullName>SACHET 390G</fullName>
            </value>
            <value>
                <fullName>SACHET 396G</fullName>
            </value>
            <value>
                <fullName>SACHET 400G</fullName>
            </value>
            <value>
                <fullName>SACHET 410G</fullName>
            </value>
            <value>
                <fullName>SACHET 420G</fullName>
            </value>
            <value>
                <fullName>SACHET 429G</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>