force-app/main/default/objects/Product2/fields/SPKERCADELACMktgS2__c.field-meta.xml
<CustomField>
    <fullName>SPKERCADELACMktgS2__c</fullName>
    <label>SPKERCADELAC Mktg-S2</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>ALYSSE FOOD MUFFIN</fullName>
            </value>
            <value>
                <fullName>ASSORTIMENT PB</fullName>
            </value>
            <value>
                <fullName>BARRE MARBREE</fullName>
            </value>
            <value>
                <fullName>BARRE NATURE</fullName>
            </value>
            <value>
                <fullName>CAKE FRUIT</fullName>
            </value>
            <value>
                <fullName>GALETTE NAT PB</fullName>
            </value>
            <value>
                <fullName>GAT BRET DEMI-LUNE</fullName>
            </value>
            <value>
                <fullName>GAT BRET ROND</fullName>
            </value>
            <value>
                <fullName>GDE GAL PB</fullName>
            </value>
            <value>
                <fullName>LE GOURMAND</fullName>
            </value>
            <value>
                <fullName>MAD A PARTAGER</fullName>
            </value>
            <value>
                <fullName>MAD COQ INDI COEUR</fullName>
            </value>
            <value>
                <fullName>MAD COQ INDI KIDS</fullName>
            </value>
            <value>
                <fullName>MAD COQ INDI MEM</fullName>
            </value>
            <value>
                <fullName>MAD COQ INDI PB</fullName>
            </value>
            <value>
                <fullName>MOELLEUX GAP</fullName>
            </value>
            <value>
                <fullName>PALET NAT PB</fullName>
            </value>
            <value>
                <fullName>PETIT BEURRE PB</fullName>
            </value>
            <value>
                <fullName>QQ NATURE</fullName>
            </value>
            <value>
                <fullName>MAD COQ INDI COQUE</fullName>
            </value>
            <value>
                <fullName>MAD COQ INDI MIXTE</fullName>
            </value>
            <value>
                <fullName>MINI PB</fullName>
            </value>
            <value>
                <fullName>MINI MGV</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>