force-app/main/default/objects/Product2/fields/SPKERCADELACNeedUnitMktgS3__c.field-meta.xml
<CustomField>
    <fullName>SPKERCADELACNeedUnitMktgS3__c</fullName>
    <label>SPKERCADELAC need unit  (Mktg-S3)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>BARQ ASSORT PB 500</fullName>
            </value>
            <value>
                <fullName>COFF 325 ASSORT PB</fullName>
            </value>
            <value>
                <fullName>BARQ GALETTE NAT PB 300</fullName>
            </value>
            <value>
                <fullName>BARQ GALETTE NAT PB 500</fullName>
            </value>
            <value>
                <fullName>BARQ GDE GAL CHO CARAM PB 240</fullName>
            </value>
            <value>
                <fullName>BARQ GDE GAL NAT PB 240</fullName>
            </value>
            <value>
                <fullName>BARQ GDE GAL PEP CHOC PB 240</fullName>
            </value>
            <value>
                <fullName>BARQ PALET NAT PB 300</fullName>
            </value>
            <value>
                <fullName>BARQ PALET NAT PB 500</fullName>
            </value>
            <value>
                <fullName>COFF CŒUR 90 PAL PB</fullName>
            </value>
            <value>
                <fullName>ETUI PALET NAT PB 120-125</fullName>
            </value>
            <value>
                <fullName>BARQ PTI BEURRE 200</fullName>
            </value>
            <value>
                <fullName>CAKE MARB CHOC 500</fullName>
            </value>
            <value>
                <fullName>CAKE NATURE 800</fullName>
            </value>
            <value>
                <fullName>CAKE BRET FRUIT 380</fullName>
            </value>
            <value>
                <fullName>DEMI-LUNE FRAMBOISE 400</fullName>
            </value>
            <value>
                <fullName>DEMI-LUNE PRUNEAU 400</fullName>
            </value>
            <value>
                <fullName>GATEAU BRETON ROND 400</fullName>
            </value>
            <value>
                <fullName>LE GOURMAND AMANDES 350</fullName>
            </value>
            <value>
                <fullName>LE GOURMAND CITRON 350</fullName>
            </value>
            <value>
                <fullName>MOELLEUX CHOCO 500</fullName>
            </value>
            <value>
                <fullName>MOELLEUX MARB PCH 450-475</fullName>
            </value>
            <value>
                <fullName>MOELLEUX NATURE 200</fullName>
            </value>
            <value>
                <fullName>MOELLEUX NATURE 350</fullName>
            </value>
            <value>
                <fullName>MOELLEUX NATURE 500</fullName>
            </value>
            <value>
                <fullName>MOELLEUX NATURE 690</fullName>
            </value>
            <value>
                <fullName>MOELLEUX NATURE BIO 350-400</fullName>
            </value>
            <value>
                <fullName>MOELLEUX PANACHE 500</fullName>
            </value>
            <value>
                <fullName>MOELLEUX PEP CHOC 350-400</fullName>
            </value>
            <value>
                <fullName>MOELLEUX PEP CHOC 500</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>