force-app/main/default/objects/Product2/fields/SPKERCADELACNumberofcomponents__c.field-meta.xml
<CustomField>
    <fullName>SPKERCADELACNumberofcomponents__c</fullName>
    <label>SPKERCADELAC  Number of components</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>