force-app/main/default/objects/Product2/fields/SPKERCADELACOfWhichWeightOfferedKg__c.field-meta.xml
<CustomField>
    <fullName>SPKERCADELACOfWhichWeightOfferedKg__c</fullName>
    <label>SPKERCADELAC of which Weight Offered (Kg</label>
    <precision>5</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>