force-app/main/default/objects/Product2/fields/SPKERCADELACONFAMILY__c.field-meta.xml
<CustomField>
    <fullName>SPKERCADELACONFAMILY__c</fullName>
    <label>SPKERCADELAC ON FAMILY</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>PRODUITS SECS</fullName>
            </value>
            <value>
                <fullName>BARRES</fullName>
            </value>
            <value>
                <fullName>GATEAUX A PARTAGER</fullName>
            </value>
            <value>
                <fullName>GATEAUX BRETONS</fullName>
            </value>
            <value>
                <fullName>MOELLEUX</fullName>
            </value>
            <value>
                <fullName>QUATRE QUART</fullName>
            </value>
            <value>
                <fullName>MUFFINS</fullName>
            </value>
            <value>
                <fullName>MADELEINES</fullName>
            </value>
            <value>
                <fullName>MINI GATEAUX</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>