force-app/main/default/objects/Product2/fields/SPKERCADELACPCB__c.field-meta.xml
<CustomField>
    <fullName>SPKERCADELACPCB__c</fullName>
    <label>SPKERCADELAC PCB</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>