force-app/main/default/objects/Product2/fields/SPKERCADELACPresentation__c.field-meta.xml
<CustomField>
    <fullName>SPKERCADELACPresentation__c</fullName>
    <label>SPKERCADELAC Presentation</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>BARQUETTE</fullName>
            </value>
            <value>
                <fullName>COFFRET ET BOITE</fullName>
            </value>
            <value>
                <fullName>ETUI</fullName>
            </value>
            <value>
                <fullName>SACHET</fullName>
            </value>
            <value>
                <fullName>A PARTAGER</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>