force-app/main/default/objects/Product2/fields/SPKERCADELACPricename__c.field-meta.xml
<CustomField>
    <fullName>SPKERCADELACPricename__c</fullName>
    <label>SPKERCADELAC Price name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>