force-app/main/default/objects/Product2/fields/SPKERCADELACPrioInnoHMSM__c.field-meta.xml
<CustomField>
    <fullName>SPKERCADELACPrioInnoHMSM__c</fullName>
    <label>SPKERCADELAC Prio Inno HMSM</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>