force-app/main/default/objects/Product2/fields/SPKERCADELACReferenceTypeNumber__c.field-meta.xml
<CustomField>
    <fullName>SPKERCADELACReferenceTypeNumber__c</fullName>
    <label>SPKERCADELAC Reference Type Number</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>