force-app/main/default/objects/Product2/fields/SPKERCADELACVHMDRIVEGAP__c.field-meta.xml
<CustomField>
    <fullName>SPKERCADELACVHMDRIVEGAP__c</fullName>
    <label>SPKERCADELAC VHM DRIVE GAP</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>