force-app/main/default/objects/Product2/fields/SPKERCADELACVHMHMGAP__c.field-meta.xml
<CustomField>
    <fullName>SPKERCADELACVHMHMGAP__c</fullName>
    <label>SPKERCADELAC VHM HM GAP</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>