force-app/main/default/objects/Product2/fields/SPKERCADELACVHMPROXIGAP__c.field-meta.xml
<CustomField>
    <fullName>SPKERCADELACVHMPROXIGAP__c</fullName>
    <label>SPKERCADELAC VHM PROXI GAP</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>